--- a/cadastro-finalizado.html
+++ b/cadastro-finalizado.html
@@ -180,7 +180,7 @@
         </ul>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
